--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+    "author": "Dave McQueen",
     "name": "squash-node",
+    "description": "Node.js module for reporting Errors to the Squash (https://github.com/SquareSquash/web) reporting system developed by Square.",
     "version": "0.0.1",
-    "private": true,
+    "repository": {
+      "url": "https://github.com/dmcqueen/squash-node"
+    },
     "dependencies": {
       "request": ">=2.12.0",
       "async": ">=0.1.0"
