--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
       "request": ">=2.12.0",
-      "async": ">=0.1.0"
+      "async": ">=0.1.0",
+      "stack-trace": ">=0.0.0"
     },
     "main" : "./src"
 }
